-feature#5368: Allow all key searching calls to be delayed by defined amount
-feature#5406: Cacti connection handling should forcibly close connections to work around PDO uncertainty
-feature#5407: Add last_updated column to the boost table to increase diagnostics in Cacti
-feature#5416: Display device class before package import 
-feature: Allow messages to be popup notifications
-feature: Upgrade billboard.js to version 3.7.4
-feature: Upgrade d3.js to version 7.8.2
-feature: Upgrade ua-parser.js to version 1.0.35

1.2.25
-SECURITY#5318: Multiple minor stored XSS vulnerabilities in Cacti 1.2.24
-SECURITY#5348: Unchecked Regular expressions can lead to privilege escalation and data leakage
-SECURITY: Protect against certain SQL Injection attacks
-SECURITY: Protect against certain command level injections in snmp functions
-SECURITY: Protect against SQL Injection in graphs.php
-SECURITY: Protect against SQL Injection in reports_user.php
-SECURITY: Protext against Reflected XSS in graphs_new.php
-issue#2959: Multi-threaded cli/rebuild_poller_cache.php, deprecated push_out_hosts.php
-issue#4045: When searching tree or list views, the URL does not update after changes
-issue#5254: Created a data source template to specify the snmp port, but it doesn't seem to work properly
-issue#5255: Data query xml path with space problem
-issue#5258: Warnings occur when installing thold plugin and as such thold will not upgrade correctly
-issue#5259: When the Data Template contains more Data Sources than the Graph Template RRDfiles won't update
-issue#5263: Warnings in Cacti log when re-indexing devices
-issue#5272: Boost continues to loose data when archive tables are missed due to overloaded MariaDB
-issue#5275: Boost stats can display odd values when running
-issue#5277: Boost should not attempt to start if there are no poller_output_boost records
-issue#5279: Rebuild poller cache does not work as expected