@@ -2535,7 +2535,7 @@ CREATE TABLE `reports_items` (
 --
 
 CREATE TABLE settings (
-  name varchar(50) NOT NULL default '',
+  name varchar(75) NOT NULL default '',
   value varchar(2048) NOT NULL default '',
   PRIMARY KEY (name)
 ) ENGINE=InnoDB ROW_FORMAT=Dynamic;
